force-app/main/default/objects/EYI_Target_Management__c/EYI_Target_Management__c.object-meta.xml
<CustomObject>
    <label>Target Management</label>
    <nameField>
        <displayFormat>TM-{000}</displayFormat>
        <label>Target Management Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Target Managements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>