force-app/main/default/objects/EYI_Target_Management__c/fields/EYI_Achivements__c.field-meta.xml
<CustomField>
    <fullName>EYI_Achivements__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Achivements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>