force-app/main/default/objects/EYI_Target_Management__c/fields/EYI_Achivements_per__c.field-meta.xml
<CustomField>
    <fullName>EYI_Achivements_per__c</fullName>
    <formula>IF( ISPICKVAL( EYI_Target_KPI__c , &apos;Lead to Walk-In Conversion ratio&apos;) ,(EYI_Achivements__c/100),(EYI_Achivements__c / EYI_Target_Number__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Achivements%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>