force-app/main/default/objects/EYI_Target_Management__c/fields/EYI_AchivementsNumtoPer__c.field-meta.xml
<CustomField>
    <fullName>EYI_AchivementsNumtoPer__c</fullName>
    <formula>IF(
    ISPICKVAL(EYI_Target_KPI__c, &quot;Lead to Walk-In Conversion ratio&quot;),
    TEXT(ROUND(EYI_Achivements__c, 2)) &amp; &quot;%&quot;,
    TEXT(EYI_Achivements__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Achivements</label>
    <type>Text</type>
</CustomField>