force-app/main/default/objects/EYI_Target_Management__c/fields/EYI_Annual_Achievement__c.field-meta.xml
<CustomField>
    <fullName>EYI_Annual_Achievement__c</fullName>
    <formula>EYI_Q1_Total_Achievement__c +  EYI_Q2_Total_Achievement__c + EYI_Q3_Total_Achievement__c + EYI_Q4_Total_Achievement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Achievement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>