force-app/main/default/objects/EYI_Target_Management__c/fields/EYI_Annual_Achievement_per__c.field-meta.xml
<CustomField>
    <fullName>EYI_Annual_Achievement_per__c</fullName>
    <formula>IF(
    EYI_Total_Annual_Target__c &gt; 0,
    EYI_Annual_Achievement__c / EYI_Total_Annual_Target__c,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Achievement %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>