force-app/main/default/objects/EYI_Target_Management__c/fields/EYI_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>EYI_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Target_Managements</relationshipName>
    <type>Lookup</type>
</CustomField>