force-app/main/default/objects/EYI_Target_Management__c/fields/EYI_Assigned_to_Text__c.field-meta.xml
<CustomField>
    <fullName>EYI_Assigned_to_Text__c</fullName>
    <label>Assigned to Text</label>
    <length>100</length>
    <type>Text</type>
</CustomField>