force-app/main/default/objects/EYI_Target_Management__c/fields/EYI_May_Target__c.field-meta.xml
<CustomField>
    <fullName>EYI_May_Target__c</fullName>
    <label>May Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>