force-app/main/default/objects/EYI_Target_Management__c/fields/EYI_Project__c.field-meta.xml
<CustomField>
    <fullName>EYI_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>EYI_Project__c</referenceTo>
    <relationshipLabel>Target Managements</relationshipLabel>
    <relationshipName>Target_Managements</relationshipName>
    <type>Lookup</type>
</CustomField>