force-app/main/default/objects/EYI_Target_Management__c/fields/EYI_Q1_Achivement__c.field-meta.xml
<CustomField>
    <fullName>EYI_Q1_Achivement__c</fullName>
    <formula>IF(
    EYI_Total_Q1_Target__c &gt; 0,
    (EYI_Q1_Total_Achievement__c / EYI_Total_Q1_Target__c) ,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q1 Achivement %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>