force-app/main/default/objects/EYI_Target_Management__c/fields/EYI_Q1_Total_Achievement__c.field-meta.xml
<CustomField>
    <fullName>EYI_Q1_Total_Achievement__c</fullName>
    <formula>EYI_April_Achievement__c + EYI_May_Achievement__c + EYI_Jun_Achievement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q1 Total Achievement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>