force-app/main/default/objects/EYI_Target_Management__c/fields/EYI_Q2_Commercial_Achievement__c.field-meta.xml
<CustomField>
    <fullName>EYI_Q2_Commercial_Achievement__c</fullName>
    <label>Q2 Commercial Achievement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>