force-app/main/default/objects/EYI_Target_Management__c/fields/EYI_Q2_Total_Achievement__c.field-meta.xml
<CustomField>
    <fullName>EYI_Q2_Total_Achievement__c</fullName>
    <formula>EYI_July_Achievement__c + EYI_Aug_Achievement__c + EYI_Sept_Achievement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q2 Total Achievement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>