force-app/main/default/objects/EYI_Target_Management__c/fields/EYI_Q3_Target__c.field-meta.xml
<CustomField>
    <fullName>EYI_Q3_Target__c</fullName>
    <label>Q3 Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>