force-app/main/default/objects/EYI_Target_Management__c/fields/EYI_Q3_Total_Achievement__c.field-meta.xml
<CustomField>
    <fullName>EYI_Q3_Total_Achievement__c</fullName>
    <formula>EYI_Oct_Achievement__c + EYI_Nov_Achievement__c + EYI_Dec_Achievement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q3 Total Achievement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>