force-app/main/default/objects/EYI_Target_Management__c/fields/EYI_Q4_Achievement__c.field-meta.xml
<CustomField>
    <fullName>EYI_Q4_Achievement__c</fullName>
    <formula>IF(
    EYI_Total_Q4_Target__c &gt; 0,
    (EYI_Q4_Total_Achievement__c / EYI_Total_Q4_Target__c) ,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q4 Achievement %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>