force-app/main/default/objects/EYI_Target_Management__c/fields/EYI_Residential_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_Residential_Type__c</fullName>
    <label>Residential Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>