force-app/main/default/objects/EYI_Target_Management__c/fields/EYI_Sept_Achievement__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sept_Achievement__c</fullName>
    <label>Sept Achievement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>