force-app/main/default/objects/EYI_Target_Management__c/fields/EYI_Target_KPI__c.field-meta.xml
<CustomField>
    <fullName>EYI_Target_KPI__c</fullName>
    <label>Target KPI</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>EYI_Target_Module__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Follow-up by CTI</fullName>
                <label>Follow-up by CTI (%)</label>
            </value>
            <value>
                <fullName>Walk-in to Booking Conversion</fullName>
                <label>Walk-in to Booking Conversion (%)</label>
            </value>
            <value>
                <fullName>Number of EOIs</fullName>
            </value>
            <value>
                <fullName>EOI Conversions</fullName>
                <label>EOI Conversions (%)</label>
            </value>
            <value>
                <fullName>Revenue Target</fullName>
            </value>
            <value>
                <fullName>Meeting Target</fullName>
            </value>
            <value>
                <fullName>New CP Empanelment</fullName>
            </value>
            <value>
                <fullName>Walkin Achieved</fullName>
            </value>
            <value>
                <fullName>VC/VP Target</fullName>
            </value>
            <value>
                <fullName>REC Calls by SM</fullName>
            </value>
            <value>
                <fullName>Visit Confirmed</fullName>
            </value>
            <value>
                <fullName>Visit Done</fullName>
            </value>
            <value>
                <fullName>Average Talk Time</fullName>
                <label>Total Talk Time (In Minutes)</label>
            </value>
            <value>
                <fullName>Lead to Walk-In Conversion ratio</fullName>
            </value>
            <value>
                <fullName>Total Outbound Calls to be Done</fullName>
            </value>
            <value>
                <fullName>Total Inbound Calls Completed</fullName>
            </value>
            <value>
                <fullName>Re-visit (Unique revisits / Total revisits)</fullName>
                <label>Re-visit (Unique revisits / Total revisits) (%)</label>
            </value>
            <value>
                <fullName>Average Follow-Ups</fullName>
                <isActive>false</isActive>
                <label>Average Follow-Ups (Per Day)</label>
            </value>
            <value>
                <fullName>Average TAT from Walk-in to Booking</fullName>
                <isActive>false</isActive>
                <label>Average TAT from Walk-in to Booking</label>
            </value>
            <value>
                <fullName>Booking from Cold/Lost leads</fullName>
                <isActive>false</isActive>
                <label>Booking from Cold/Lost leads (%)</label>
            </value>
            <value>
                <fullName>Cancellation Count</fullName>
                <isActive>false</isActive>
                <label>Cancellation Count</label>
            </value>
            <value>
                <fullName>Follow-ups missed</fullName>
                <isActive>false</isActive>
                <label>Follow-ups missed (%)</label>
            </value>
            <value>
                <fullName>L1 TAT Approval</fullName>
                <isActive>false</isActive>
                <label>L1 TAT Approval  (In Minutes)</label>
            </value>
            <value>
                <fullName>L2 TAT Approval</fullName>
                <isActive>false</isActive>
                <label>L2 TAT Approval (In Minutes)</label>
            </value>
            <value>
                <fullName>L3 TAT Approval</fullName>
                <isActive>false</isActive>
                <label>L3 TAT Approval (In Minutes)</label>
            </value>
            <value>
                <fullName>Number of Cases Where the Cooling Period is Extended</fullName>
                <isActive>false</isActive>
                <label>Number of Cases Where the Cooling Period is Extended (%)</label>
            </value>
            <value>
                <fullName>Number of references generated by the Sales Manager</fullName>
                <isActive>false</isActive>
                <label>Number of references generated by the Sales Manager (%)</label>
            </value>
            <value>
                <fullName>Revenue (Project-Wise Revenue Target in Crore)</fullName>
                <isActive>false</isActive>
                <label>Revenue (Project-Wise Revenue Target in Crore)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>