force-app/main/default/objects/EYI_Target_Management__c/fields/EYI_Target_Module__c.field-meta.xml
<CustomField>
    <fullName>EYI_Target_Module__c</fullName>
    <label>Target Module</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Presales</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Sourcing</fullName>
            </value>
            <value>
                <fullName>Revenue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>