force-app/main/default/objects/EYI_Target_Management__c/fields/EYI_Target_Month__c.field-meta.xml
<CustomField>
    <fullName>EYI_Target_Month__c</fullName>
    <label>Target Month</label>
    <length>100</length>
    <type>Text</type>
</CustomField>