force-app/main/default/objects/EYI_Target_Management__c/fields/EYI_Target_Month_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Target_Month_Date__c</fullName>
    <label>Target Month Date</label>
    <type>Date</type>
</CustomField>