force-app/main/default/objects/EYI_Target_Management__c/fields/EYI_Target_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Target_Number__c</fullName>
    <label>Target Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>