force-app/main/default/objects/EYI_Target_Management__c/fields/EYI_Total_Annual_Target__c.field-meta.xml
<CustomField>
    <fullName>EYI_Total_Annual_Target__c</fullName>
    <formula>ROUND((EYI_Total_Q1_Target__c + EYI_Total_Q2_Target__c + EYI_Total_Q3_Target__c + EYI_Total_Q4_Target__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total_Annual Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>