force-app/main/default/objects/EYI_Target_Management__c/fields/EYI_Total_Q3_Target__c.field-meta.xml
<CustomField>
    <fullName>EYI_Total_Q3_Target__c</fullName>
    <formula>Round((EYI_Oct_Target__c + EYI_Nov_Target__c + EYI_Dec_Target__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Q3 Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>