force-app/main/default/objects/EYI_Target_Management__c/fields/Q2_Achievement__c.field-meta.xml
<CustomField>
    <fullName>Q2_Achievement__c</fullName>
    <formula>IF(
    EYI_Total_Q2_Target__c &gt; 0,
    (EYI_Q2_Total_Achievement__c / EYI_Total_Q2_Target__c) ,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q2 Achievement %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>