force-app/main/default/objects/EYI_Target_Management__c/listViews/Revenue_Targets.listView-meta.xml
<ListView>
    <fullName>Revenue_Targets</fullName>
    <columns>NAME</columns>
    <columns>EYI_Target_KPI__c</columns>
    <columns>EYI_Target_Start_Date__c</columns>
    <columns>EYI_Target_End_Date__c</columns>
    <columns>EYI_Total_Annual_Target__c</columns>
    <columns>EYI_Annual_Achievement__c</columns>
    <columns>EYI_Annual_Achievement_per__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EYI_Target_Module__c</field>
        <operation>equals</operation>
        <value>Revenue</value>
    </filters>
    <label>Revenue Targets</label>
</ListView>