force-app/main/default/objects/EYI_Target_Management__c/listViews/Sales_Target_Management.listView-meta.xml
<ListView>
    <fullName>Sales_Target_Management</fullName>
    <columns>NAME</columns>
    <columns>EYI_Target_Number__c</columns>
    <columns>EYI_Target_KPI__c</columns>
    <columns>EYI_Project__c</columns>
    <columns>EYI_Target_Start_Date__c</columns>
    <columns>EYI_Target_End_Date__c</columns>
    <columns>EYI_AchivementsNumtoPer__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>EYI_Target_Module__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EYI_Target_Module__c</field>
        <operation>equals</operation>
        <value>Sales</value>
    </filters>
    <label>Sales Target Management</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Sales_Head</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Sales_Head_1</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Sales_Head_2</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Sourcing_Head_1</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Sourcing_Head_2</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>