force-app/main/default/objects/EYI_Target_Management__c/listViews/Sourcing.listView-meta.xml
<ListView>
    <fullName>Sourcing</fullName>
    <columns>NAME</columns>
    <columns>EYI_Target_KPI__c</columns>
    <columns>EYI_Target_Module__c</columns>
    <columns>EYI_Target_Start_Date__c</columns>
    <columns>EYI_Target_End_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EYI_Target_Module__c</field>
        <operation>equals</operation>
        <value>Sourcing</value>
    </filters>
    <label>Sourcing Targets</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Sourcing_Head_1</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Sourcing_Head_2</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Sourcing_Manager_1</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Sourcing_Manager_2</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>